--- a/index.html
+++ b/index.html
@@ -15,5 +15,21 @@
             <button>Learn more</button>
         </div>
     </main>
+    <div class="about">    
+        <div class="about-left">
+            <hr><h2>Multiple award-winning IELTS Institute in Sargodha.</h2>
+            <img width="550px" height="400px" src="./left image 1.jpeg" alt="">
+        </div>
+        <div class="about-right">
+            <div class="img-right">
+                <img width="300px" height="185px" src="./right image 1.jpeg" alt="">
+                <iframe width="300px" height="185px" src="https://www.youtube.com/embed/SYq4YYYUdW0?si=TOoQJPYyEGANlY4j" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            <div class="right-text">
+                <p>“We have been teaching IELTS since 2013.Our unorthodox method of teaching sets us apart from the rest of coaching centres. We purely serve as an IELTS coaching centre hence provide individually tailored techniques and methods for each student coming from different educational background as per his/her needs.Get in touch today for free trial classes.</p>
+            </div>
+        </div>   
+    </div>
+    
 </body>
 </html>
